--- a/Day8.html
+++ b/Day8.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horizonatal ruler line</title>
+    <title>Horizonatal ruler line no</title>
 </head>
 <body>
     <p>horizonal line 1</p><hr>
