--- a/Day9.html
+++ b/Day9.html
@@ -8,7 +8,7 @@
 <body>
     <h4>Definition of computer</h4>
     <p><q>Computer is an electronic device which accept the data 
-        and process the data according to the information - </q>that can per perform
+        and process the data according to the information -- </q>that can per perform
         mathmetical and logical information.
     </p>
 </body>
