Use of hyperlink

--- a/Day10.html
+++ b/Day10.html
@@ -9,5 +9,6 @@
     <p>Visit google : <a href="http://google.com" target="_blank">click me</a></p>
     <p>Visit facebook : <a href="http://facebook.com" target="_blank">click me</a></p>
     <p>Visit youtube : <a href="http://youtube.com" target="_blank">click me</a></p>
+    <p>Visit twitter : <a href="http://twitter.com" target="_blank">click me</a></p>
 </body>
 </html>
