--- a/Day14.html
+++ b/Day14.html
@@ -39,6 +39,14 @@
         <li>Tripti</li>
         <li>Diksha </li>
     </ol>
+    <hr>
+    <h3>Example of Define listing :-</h3>
+    <dl> <!--Define list-->
+        <dt>Definition of computer:</dt> <!--Define term-->
+        <dd>Computer is an electronic device which accept the data, that process the data according to the informatin.
+            that can perform mathmatical and logical infomation.
+        </dd> 
+    </dl>
 
 </body>
 </html>
